# neural-optics

./: .gitignore  CMakeLists.txt  README.md
build_cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_cmake/drjit/: cmake_install.cmake
build_cmake/drjit/drjit/: __init__.pyi  config.py  config.pyi  hashgrid.pyi  nn.pyi  random.pyi
build_cmake/drjit/drjit/auto/: __init__.pyi  ad.pyi
build_cmake/drjit/drjit/cuda/: __init__.pyi  ad.pyi
build_cmake/drjit/drjit/llvm/: ad.pyi
build_cmake/drjit/ext/drjit-core/: cmake_install.cmake
build_cmake/drjit/ext/drjit-core/ext/nanothread/: cmake_install.cmake
build_cmake/drjit/ext/drjit-core/resources/: cmake_install.cmake  kernels.c
build_cmake/drjit/nanobind/: cmake_install.cmake
build_cmake/drjit/src/extra/: cmake_install.cmake
build_cmake/drjit/src/python/: cmake_install.cmake  docstr.h
build_cmake/nanobind/: cmake_install.cmake
build_cmake/ptx/: optix_kernels.ptx
py/optics-scene-tool/: scene_data_generator.py  scene_visualizer.py  visualize_scene_distribution.py
py/optics-simulation-tool/: exr_utils.py  losses.py  main.py  optimizer.py  parser.py  setup.py
py/optimization_configs/: lens_config_0.json  lens_config_1.json  lens_config_2.json  lens_config_3.json  lens_config_4.json  lens_config_5.json  lens_config_6.json  lens_config_7.json  lens_config_8.json  lens_config_9.json
py/scripts/: generate-scene-datasets.sh  generate-target-datasets.sh  optimization-config.json  optimize-bspline-lens.sh  optimize-bspline-reflector.sh  simulate-bspline-lens.sh  simulation-config.json
py/target-generation-tool/: gen.py
src/: binding.cpp  bsdf.hpp  cuda_kernels.cu  emitter.hpp  light.hpp  main.cpp  material.hpp  object.hpp  optimizer.hpp  optix_scene.cpp  optix_scene.hpp  scene.hpp  scene_parser.hpp  sensor.hpp  shape.hpp  shape_base.hpp  shape_bspline.hpp  shape_displacement.hpp  shape_polynomial.hpp  shell.hpp  simulator.hpp  solid.hpp  spectrum.hpp  surface.hpp  utils.hpp
src/bindings/: bind_bsdf.hpp  bind_emitter.hpp  bind_light.hpp  bind_material.hpp  bind_object.hpp  bind_optix.hpp  bind_parser.hpp  bind_scene.hpp  bind_sensor.hpp  bind_shape.hpp  bind_shell.hpp  bind_simulator.hpp  bind_solid.hpp  bind_spectrum.hpp  bind_surface.hpp  bind_utils.hpp
src/interactive/: interactive_viewer.cpp  interactive_viewer.hpp
src/optix_shaders/: optix_kernels.cu  optix_render_kernels.cu
src/renderer/: camera.hpp  render_config.hpp  scene_renderer.cpp  scene_renderer.hpp
